[build-system]
requres = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

# [build-system]
# requires = ["setuptools", "setuptools_scm"]
# build-backend = "setuptools.build_meta"
# 
# [project]
# name = "pxem"
# description = "Filename-first programming language Pxem implementation"
# readme = "README.md"
# license = {
# 	file = "LICENSE"
# }
# classifiers = [
# 	"Programming Language :: Python :: 3",
# ]
# dynamic = ["version"]
# 
# [tool.setuptools.packages.find]
# exclude = ["build", "tests"]
# 
# [tool.setuptools.dynamic]
# version = {
# 	attr = "src.foo.version"
# }
# 
# [tool.setuptools_scm]
# write_to = "src/foo/_version.py"
