[metadata]
name = pxem
version = 0.0.1
description = Filename-first esoteric programming language Pxem implementation in Python
long_description = file: README.md
long_description_content_type = text/markdown
license = WTFPL
author = Tpaefawzen
author_email = "https://www.esolangs.blog/contact"
classifiers =
	Programming Language :: Python :: 3

[options]
# IDK
